; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/keebio/fourier/keymaps/jennetters/extr_keymap.c_esc_gr_reset.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/keebio/fourier/keymaps/jennetters/extr_keymap.c_esc_gr_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@KC_ESC = common dso_local global i32 0, align 4
@KC_GRV = common dso_local global i32 0, align 4
@KC_LSFT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @esc_gr_reset(%struct.TYPE_3__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp eq i32 %7, 1
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i32, i32* @KC_ESC, align 4
  %11 = call i32 @unregister_code(i32 %10)
  br label %26

12:                                               ; preds = %2
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = icmp eq i32 %15, 2
  br i1 %16, label %17, label %20

17:                                               ; preds = %12
  %18 = load i32, i32* @KC_GRV, align 4
  %19 = call i32 @unregister_code(i32 %18)
  br label %25

20:                                               ; preds = %12
  %21 = load i32, i32* @KC_LSFT, align 4
  %22 = call i32 @unregister_code(i32 %21)
  %23 = load i32, i32* @KC_GRV, align 4
  %24 = call i32 @unregister_code(i32 %23)
  br label %25

25:                                               ; preds = %20, %17
  br label %26

26:                                               ; preds = %25, %9
  ret void
}

declare dso_local i32 @unregister_code(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
